2000-11-01 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSUserDefaults.m: Fixed uninitialised variable bug.
	* Source/NSString.m: Fixed error in xml property list parsing
	* Source/GSXML.m: Various SAX things to use default implementation.

2000-10-31  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSString.m: Implemented
	([-initWithCharactersNoCopy:length:freeWhenDone:]) and
	([-initWithCStringNoCopy:length:freeWhenDone:]) for NSMutableString.
	([-initWithCStringNoCopy:length:freeWhenDone:]) for NSString.

2000-10-31  Richard Frith-Macdonald <rfm@gnu.org>

	Loads of files modified, fast.x removed.
	Found it unexpectedly easy to tidy up so that all functions for
	accessing the runtime are now in NSObjCRuntime.h.
	Now all :-) we need are Apple runtime implementations, configuration
	auto-detect for the apple runtime, and loads of updating of any
	bits of code that call the runtime directly.

2000-10-31  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/gnustep/base/NSGString.h:
	* Headers/gnustep/base/NSGCString.h:
	* Source/NSGString.m:
	* Source/NSGCString.m: Removed classes - no longer used.
	* Headers/gnustep/base/NSObjCRuntime.h:
	* Headers/gnustep/base/fast.x:
	* Source/GSString.m:
	* Source/Makefile.postamble:
	* Source/NSArchiver.m:
	* Source/NSCTemplateValue.m:
	* Source/NSConcreteValue.m:
	* Source/NSCountedSet.m:
	* Source/NSDate.m:
	* Source/NSDictionary.m:
	* Source/NSDistantObject.m:
	* Source/NSGSet.m:
	* Source/NSNumber.m:
	* Source/NSObject.m:
	* Source/NSScanner.m:
	* Source/NSSerializer.m:
	* Source/NSSet.m:
	* Source/NSUnarchiver.m:
	Changed calls to 'fastClass()' to use 'GSObjCClassOfObject()' and
	added that to NSObjCRuntime.h.  Removed central class and
	implementation caching from NSObject.m and fast.x since it was not
	being effectively used.  New intention to do removal of fast.x and
	add similar functionality to NSObjCRuntime.h - intention being to
	combine functionality of fast access to the runtime, and hiding both